compiler/tests/schema/error/service_invalid_base_struct.bond
namespace tests

struct dummy {
    0: int32 count;
}

// Invalid service definition with struct as a base
service Foo : dummy
{
    nothing bar();
}  
